# varmint-rs

./: .travis.yml  Cargo.toml  README.md
src/: len.rs  lib.rs  read.rs  write.rs
