[package]
name = "varmint"
version = "0.1.3"
authors = ["Wim Looman <wim@nemo157.com>"]

description = "A Rust implementation of the varint codec as used in Google's Protocol Buffers"

repository = "https://github.com/mycorrhiza/varmint-rs"

readme = "README.md"
keywords = ["varint", "protobuf"]

license = "MIT/Apache-2.0"

[dependencies]
